// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CanvasForm > should render 1`] = `
<div>
  <div
    class="pf-v6-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-_r_0_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-l-grid pf-m-gutter"
        >
          <div
            class="pf-v6-l-grid__item pf-m-11-col form-header"
          >
            <img
              alt="Choice"
              class="form-header__icon-route.from.steps.1.choice"
              src="/src/assets/eip/choice.png"
            />
            <h2
              class="pf-v6-c-title pf-m-h2 form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-_r_2_"
              data-ouia-component-type="PF6/Title"
              data-ouia-safe="true"
            >
              Choice
            </h2>
          </div>
          <div
            class="pf-v6-l-grid__item pf-m-1-col canvas-header-close"
          >
            <button
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-_r_3_"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  data-testid="times-icon"
                  role="img"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v6-c-toggle-group form-tabs"
          role="group"
        >
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Required fields only"
          >
            <button
              aria-pressed="true"
              class="pf-v6-c-toggle-group__button pf-m-selected"
              id="Required"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Required
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows All fields"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="All"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                All
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Modified fields only"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="Modified"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Modified
              </span>
            </button>
          </div>
        </div>
        <div
          class="pf-v6-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body canvas-form__body"
    >
      <form
        class="cds--form kaoto-form kaoto-form__label"
      />
      <div
        class="cds--tile kaoto-form kaoto-form__empty"
        data-testid="no-field-found"
      >
        <div
          class="cds--inline-notification cds--inline-notification--info cds--inline-notification--hide-close-button"
          role="status"
        >
          <div
            class="cds--inline-notification__details"
          >
            <svg
              aria-hidden="true"
              class="cds--inline-notification__icon"
              fill="currentColor"
              focusable="false"
              height="20"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 32 32"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
                data-icon-path="inner-path"
                fill="none"
              />
              <path
                d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
              />
              <title>
                info icon
              </title>
            </svg>
            <div
              class="cds--inline-notification__text-wrapper"
            >
              <div
                class="cds--inline-notification__title"
                dir="auto"
              >
                No Required fields found
              </div>
              <div
                class="cds--inline-notification__subtitle"
                dir="auto"
              >
                No field found matching this criteria. Please switch to the All tab.
              </div>
              <a
                class="cds--link cds--link--inline"
              >
                Switch to All tab
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm > should render nothing if no schema and no definition is available 1`] = `
<div>
  <div
    class="pf-v6-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-_r_b_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-l-grid pf-m-gutter"
        >
          <div
            class="pf-v6-l-grid__item pf-m-11-col form-header"
          >
            <h2
              class="pf-v6-c-title pf-m-h2 form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-_r_d_"
              data-ouia-component-type="PF6/Title"
              data-ouia-safe="true"
            >
              route
            </h2>
          </div>
          <div
            class="pf-v6-l-grid__item pf-m-1-col canvas-header-close"
          >
            <button
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-_r_e_"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  data-testid="times-icon"
                  role="img"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v6-c-toggle-group form-tabs"
          role="group"
        >
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Required fields only"
          >
            <button
              aria-pressed="true"
              class="pf-v6-c-toggle-group__button pf-m-selected"
              id="Required"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Required
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows All fields"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="All"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                All
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Modified fields only"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="Modified"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Modified
              </span>
            </button>
          </div>
        </div>
        <div
          class="pf-v6-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body canvas-form__body"
    >
      <div
        class="pf-v6-c-card"
        data-ouia-component-id="OUIA-Generated-Card-_r_f_"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v6-c-card__header"
        >
          <div
            class="pf-v6-c-card__header-main"
          >
            <div
              class="pf-v6-c-card__title"
            >
              <div
                class="pf-v6-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-code-block"
          >
            <div
              class="pf-v6-c-code-block__content"
            >
              <pre
                class="pf-v6-c-code-block__pre"
              >
                <code
                  class="pf-v6-c-code-block__code"
                />
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__footer"
        >
          <div
            class="pf-v6-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-_r_h_"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CanvasForm > should render nothing if no schema is available 1`] = `
<div>
  <div
    class="pf-v6-c-card canvas-form"
    data-ouia-component-id="OUIA-Generated-Card-_r_4_"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <div
          class="pf-v6-l-grid pf-m-gutter"
        >
          <div
            class="pf-v6-l-grid__item pf-m-11-col form-header"
          >
            <h2
              class="pf-v6-c-title pf-m-h2 form-header__title"
              data-ouia-component-id="OUIA-Generated-Title-_r_6_"
              data-ouia-component-type="PF6/Title"
              data-ouia-safe="true"
            >
              route
            </h2>
          </div>
          <div
            class="pf-v6-l-grid__item pf-m-1-col canvas-header-close"
          >
            <button
              class="pf-v6-c-button pf-m-plain"
              data-ouia-component-id="OUIA-Generated-Button-plain-_r_7_"
              data-ouia-component-type="PF6/Button"
              data-ouia-safe="true"
              data-testid="close-side-bar"
              type="button"
            >
              <span
                class="pf-v6-c-button__icon"
              >
                <svg
                  data-testid="times-icon"
                  role="img"
                >
                  <path />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          aria-label="Single selectable form tabs"
          class="pf-v6-c-toggle-group form-tabs"
          role="group"
        >
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Required fields only"
          >
            <button
              aria-pressed="true"
              class="pf-v6-c-toggle-group__button pf-m-selected"
              id="Required"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Required
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows All fields"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="All"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                All
              </span>
            </button>
          </div>
          <div
            class="pf-v6-c-toggle-group__item"
            title="Shows Modified fields only"
          >
            <button
              aria-pressed="false"
              class="pf-v6-c-toggle-group__button"
              id="Modified"
              type="button"
            >
              <span
                class="pf-v6-c-toggle-group__text"
              >
                Modified
              </span>
            </button>
          </div>
        </div>
        <div
          class="pf-v6-c-text-input-group filter-fields"
          data-testid="filter-fields"
        >
          <div
            class="pf-v6-c-text-input-group__main pf-m-icon"
          >
            <span
              class="pf-v6-c-text-input-group__text"
            >
              <span
                class="pf-v6-c-text-input-group__icon"
              >
                <svg
                  aria-hidden="true"
                  class="pf-v6-svg"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  width="1em"
                >
                  <svg
                    class="pf-v6-icon-default"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                    />
                  </svg>
                  <svg
                    class="pf-v6-icon-rh-ui"
                    viewBox="0 0 32 32"
                  >
                    <path
                      d="m30.796 29.205-8.557-8.557A11.945 11.945 0 0 0 25 13c0-6.617-5.383-12-12-12S1 6.383 1 13s5.383 12 12 12c2.904 0 5.57-1.038 7.648-2.761l8.556 8.556a1.122 1.122 0 0 0 1.592 0 1.127 1.127 0 0 0 0-1.591ZM3 13C3 7.486 7.486 3 13 3s10 4.486 10 10-4.486 10-10 10S3 18.514 3 13Z"
                    />
                  </svg>
                </svg>
              </span>
              <input
                aria-label="Search input"
                class="pf-v6-c-text-input-group__text-input"
                placeholder="Find properties by name"
                type="text"
                value=""
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body canvas-form__body"
    >
      <div
        class="pf-v6-c-card"
        data-ouia-component-id="OUIA-Generated-Card-_r_8_"
        data-ouia-component-type="PF6/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-v6-c-card__header"
        >
          <div
            class="pf-v6-c-card__header-main"
          >
            <div
              class="pf-v6-c-card__title"
            >
              <div
                class="pf-v6-c-card__title-text"
              >
                Node source
              </div>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__body"
        >
          <div
            class="pf-v6-c-code-block"
          >
            <div
              class="pf-v6-c-code-block__content"
            >
              <pre
                class="pf-v6-c-code-block__pre"
              >
                <code
                  class="pf-v6-c-code-block__code"
                >
                  id: route-8888
from:
  uri: timer
  parameters:
    timerName: tutorial
  steps:
    - set-header:
        simple: \${random(2)}
        name: myChoice
    - choice:
        when:
          - simple: \${header.myChoice} == 1
            steps:
              - log:
                  id: log-1
                  message: We got a one.
        otherwise:
          steps:
            - to:
                uri: "amqp:queue:"
            - to:
                uri: "amqp:queue:"
            - log:
                id: log-2
                message: We got a \${body}
    - to:
        uri: direct:my-route
        parameters:
          bridgeErrorHandler: true

                </code>
              </pre>
            </div>
          </div>
        </div>
        <div
          class="pf-v6-c-card__footer"
        >
          <div
            class="pf-v6-c-alert pf-m-warning"
            data-ouia-component-id="OUIA-Generated-Alert-warning-_r_a_"
            data-ouia-component-type="PF6/Alert"
            data-ouia-safe="true"
          >
            <div
              class="pf-v6-c-alert__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 32 32"
                width="1em"
              >
                <path
                  d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
                />
              </svg>
            </div>
            <h4
              class="pf-v6-c-alert__title"
            >
              <span
                class="pf-v6-screen-reader"
              >
                Warning alert:
              </span>
              Unknow node type
            </h4>
            <div
              class="pf-v6-c-alert__description"
            >
              The configuration for an unknown node cannot be changed in the configuration form. Please switch to the source code and correct the node type. Another option is to replace the step in the graphical editor but in that case you will probably lose the existing configuration.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
